# llm-reliability-lab

./: .env.example  .gitignore  pyproject.toml
apps/api/: main.py
apps/dashboard/: home.py
datasets/sample_corpus/: Readme.md  documents.jsonl  questions.jsonl
scripts/: build_index.py  ingest_dataset.py  run_eval.py  test_rag.py  test_retriever.py
src/config/: logging.py  settings.py
src/eval/: runner.py
src/eval/evaluators/: answer_eval.py  faithfulness.py  hallucination.py  relevance.py  retrieval_eval.py
src/eval/judges/: llm_judge.py
src/eval/metrics/: generation.py  retrieval.py
src/eval/report/: save_results.py
src/indexing/: build_index.py  chroma_store.py  embedder.py
src/ingestion/: chunking.py  loaders.py  pipeline.py  question_loader.py  schemas.py
src/models/: llm_factory.py  provider_adapters.py
src/rag/: generator.py  pipeline.py  prompt_builder.py  retriever.py
